# upload_img_server

./: README.md  docker-compose.yml  pyproject.toml
services/backend/: .env.sample  pyproject.toml
services/backend/src/: file_handler.py  pagination.py  run.py  server.py
services/backend/src/db/: dependencies.py  dto.py  repositories.py  session.py
services/backend/src/exceptions/: pagination_errors.py  repository_errors.py
services/backend/src/handlers/: file_handler.py  http_handler.py
services/backend/src/mixins/: json_sender.py  pagination.py  route_parser.py  sorter.py
services/backend/src/settings/: config.py
services/frontend/: images.html  index.html  upload.html
services/frontend/static/css/: images.css  upload.css
services/frontend/static/js/: images.js  random-hero.js  upload.js
services/nginx/: nginx.conf
