[project]
name = "upload-img-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Oleksandr Mileshkin",email = "mileshkin89@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "pillow (>=11.3.0,<12.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "psycopg-pool (>=3.2.6,<4.0.0)",
    "psutil (>=7.0.0,<8.0.0)",
    "watchfiles (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
